--- a/Library Management System/Library Management System.csproj
+++ b/Library Management System/Library Management System.csproj
@@ -116,6 +116,12 @@
     <Compile Include="MyInformation.Designer.cs">
       <DependentUpon>MyInformation.cs</DependentUpon>
     </Compile>
+    <Compile Include="PayFine.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PayFine.Designer.cs">
+      <DependentUpon>PayFine.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReturnBook.cs">
@@ -177,6 +183,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyInformation.resx">
       <DependentUpon>MyInformation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PayFine.resx">
+      <DependentUpon>PayFine.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
